--- a/ormconfig.json.example
+++ b/ormconfig.json.example
@@ -1,10 +1,9 @@
 {
-  "type": "mysql",
-  "host": "localhost",
-  "port": 3306,
-  "username": "your-mysql-username",
-  "password": "your-mysql-password",
-  "database": "nestjsrealworld",
+  "type": "mongodb",
+  "url": "mongodb+srv://<USER>:<PASWORD>@<MONGODBURL>/",
+  "database": "DBNAME",
   "entities": ["src/**/**.entity{.ts,.js}"],
-  "synchronize": true
+  "synchronize": false,
+  "useNewUrlParser": true,
+  "useUnifiedTopology": true
 }
